# Ari

./: .env  .env.example  .gitignore  README.md  fixTUI.md  main.py  pyproject.toml  simple.py  test.py  test_simple.py  test_ui.py  test_widget.py  utils.py
config/: __init__.py  config.py
core/: __init__.py  agent_manager.py  ari_agent.py  handoffs.py  main_agent.py  planning_agent.py  stream_manager.py
core/lib/: fixed_agentscope_embedding.py  fixed_mem0_memory.py  fixed_openai_embedding.py  my_base_agent_lib.py  stream_agnet_lib.py
memory/vector_store/: meta.json
memory/vector_store/collection/mem0/: storage.sqlite
skill/agentscope/: view_agentscope_module.py
skill/textual/: SKILL.md  view_textual_module.py
tools/: creat_worker.py  create_worker.py  ex_insert_text_file.py  ex_view_text_file.py  ex_write_text_file.py  fetch_web_content.py  task_decomposer.py  tavily_search.py
ui/: __init__.py  app.py  chat_widget.py  message_router.py  message_stream_manager.py  result_output_display.py  system_message_display.py  system_message_widget.py  task_list_widget.py  task_status_display.py  theme.py  thinking_display.py  thinking_widget.py  user_input.py  user_input_widget.py
utils/: __init__.py  utils.py
