[project]
name = "ari"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "agentscope",
    "asyncio>=4.0.0",
    "mem0ai>=1.0.1",
    "packaging>=25.0",
    "pyperclip>=1.11.0",
    "textual>=7.0.0",
]

[tool.uv.sources]
agentscope = { git = "https://github.com/agentscope-ai/agentscope.git" }
