[project]
name = "ari"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "agentscope",
    "asyncio>=4.0.0",
    "chromadb>=1.4.0",
    "mem0ai>=1.0.1",
    "packaging>=25.0",
    "prompt-toolkit>=3.0.52",
    "pyperclip>=1.11.0",
    "textual>=7.0.0",
]

[tool.uv.sources]
agentscope = { git = "https://github.com/agentscope-ai/agentscope.git" }
